<resources>
    <string name="app_name">GearVR Disabler</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="version">Version 1.0</string>
    <string name="about_text">This app was developed by Vinicius Borges, software engineer student at Brasilia University. Don\'t forget to evaluate this app.</string>
    <string name="donate">Buy me a beer (:</string>
    <string name="banner_main_id" translatable="false">ca-app-pub-3212958863845087/1406909650</string>
    <string name="banner_about_id" translatable="false">ca-app-pub-3212958863845087/5021354052</string>
    <string name="report_bug">Report bugs</string>
    <string name="remove_ads">Remove ads</string>
    <string name="first_run_dialog_title">First run</string>
    <string name="first_run_dialog_content">This app requires internet connection, enable it to continue.\n\nIt also requires Admin Acess and Samsung\'s license activation.\nRemind that Samsung\'s license activation is on their server, so sometimes it won\'t work because of internet traffic. So be patient and try again later.\n\nTo uninstall this app go to options and click uninstall.</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="uninstall_dialog_titlle">Alert</string>
    <string name="uninstall_dialog_content">Are you sure you want to uninstall?</string>
</resources>
