<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vba.gearvrdisabler.MainActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_ads"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:title="@string/remove_ads"/>

    <item
        android:id="@+id/action_report_bug"
        android:title="@string/report_bug"
        android:orderInCategory="103"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_uninstall"
        android:title="@string/action_uninstall"
        android:orderInCategory="104"
        app:showAsAction="never"/>
</menu>
