<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vba.gearvrdisabler.About">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher"
        android:layout_marginTop="30dp"
        android:id="@+id/about_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_below="@+id/about_icon"
        android:layout_alignParentStart="true"
        android:id="@+id/about_text_version" />

    <ImageView
        android:id="@+id/about_line_spacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/line_spacer"
        android:textAlignment="center"
        android:layout_below="@+id/about_text_version"/>

    <TextView
        android:id="@+id/about_text_about"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/about_text"
        android:textAlignment="center"
        android:layout_below="@+id/about_line_spacer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_donate_button"
        android:background="@drawable/btn_donate"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate"
        android:id="@+id/about_donate_text"
        android:layout_above="@+id/about_donate_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"/>


</RelativeLayout>
